--- a/10.2.0/angular/src/app/users/create-user/create-user-dialog.component.html
+++ b/10.2.0/angular/src/app/users/create-user/create-user-dialog.component.html
@@ -22,7 +22,7 @@
                 </p-select>
             </div>
         </div>
-        <div class="form-group row required mb-0">
+        <div class="form-group row required mb-0 mt-2">
             <div class="col-md-6 d-flex flex-column">
                 <label class="col-form-label" for="name">
                     {{ 'Name' | localize }}
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <div class="form-group row required mb-0">
+        <div class="form-group row required mb-0 mt-2">
             <div class="col-md-4 d-flex flex-column">
                 <label class="col-form-label" for="userName">
                     {{ 'UserName' | localize }}
@@ -72,7 +72,7 @@
         </div>
 
 
-        <div class="form-group row required mb-0">
+        <div class="form-group row required mb-0 mt-2">
             <div class="col-md-6 d-flex flex-column">
                 <label class="col-form-label" for="password">
                     {{ 'Password' | localize }}
