--- a/10.2.0/angular/src/app/pharmacist/create-pharmacist-prescription/create-pharmacist-prescription.component.html
+++ b/10.2.0/angular/src/app/pharmacist/create-pharmacist-prescription/create-pharmacist-prescription.component.html
@@ -1,167 +1,215 @@
 <div class="form-container" style="position: relative;">
-    <div class="overlay" *ngIf="isSaving">
-        <p-progressSpinner></p-progressSpinner>
-    </div>
-    <form class="form-horizontal" autocomplete="off" #createPharmacistPrescriptionForm="ngForm" (ngSubmit)="save()">
-        <abp-modal-header title="Create Pharmacist Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
+  <div class="overlay" *ngIf="isSaving">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
 
-        <div class="modal-body">
-            <!-- Patient Selection -->
-            <div class="row">
-                <div class="col-md-12">
-                    <label><b>Select Patient</b></label>
-                    <p-select [options]="patients" optionLabel="fullName" [optionValue]="'id'"
-                        placeholder="Select Patient" [(ngModel)]="selectedPatient" name="patientId"
-                        (onChange)="onPatientChange()" class="w-100" required>
-                    </p-select>
-                </div>
-            </div>
+  <form class="form-horizontal" autocomplete="off" #createPharmacistPrescriptionForm="ngForm" (ngSubmit)="save()">
+    <abp-modal-header title="Create Pharmacist Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
-            <!-- Prescription (Only if OPD) -->
-            <div class="row mt-3">
-                <div class="col-md-12">
-                    <label>Select Prescription</label>
-                    <p-select [options]="prescriptions" optionLabel="prescriptionName" optionValue="id"
-                        placeholder="Select Prescription" [(ngModel)]="selectedPrescription" name="prescriptionId"
-                        (onChange)="onPrescriptionChange($event.value)" class="w-100" required>
-                    </p-select>
-                </div>
-            </div>
-            <!-- Prescription Items Table -->
+    <div class="modal-body">
 
-            <div class="mt-3">
-
-                <div *ngIf="selectedPrescriptionItem?.length>0">
-                    <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h5>Selected Prescription Items</h5>
-                        <p-button label="Add Item" severity="info" icon="fa-solid fa-plus" (click)="NewItem()"
-                            *ngIf="!newPrescriptionItem" />
-                    </div>
-                    <!-- Confirmed Items Table -->
-                    <p-table [value]="selectedPrescriptionItem" class="p-datatable-sm shadow-md rounded"
-                        [tableStyle]="{ 'min-width': '40rem' }" [dataKey]="'_rowId'">
-                        <ng-template pTemplate="header">
-                            <tr>
-                                <th>Medicine</th>
-                                <th>Dosage</th>
-                                <th>Frequency</th>
-                                <th>Duration</th>
-                                <th>Instructions</th>
-                                <th>Price</th>
-                                <th>Stock</th>
-                                <th>Qty</th>
-                                <th class="text-right">Line Total</th>
-                                <th>Action</th>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-itm let-i="rowIndex">
-                            <tr>
-                                <td>{{ itm.medicineName }}</td>
-                                <td>{{ itm.dosage }}</td>
-                                <td>{{ itm.frequency }}</td>
-                                <td>{{ itm.duration }}</td>
-                                <td>{{ itm.instructions }}</td>
-                                <td>{{ itm.unitPrice | number:'1.2-2' }}</td>
-                                <td>{{ getStockForItem(itm) }}</td>
-                                <td style="width:140px;">
-                                    <p-inputNumber [(ngModel)]="itm.qty" [showButtons]="true" [min]="1"
-                                        name="quantity{{itm._rowId}}"
-                                        (ngModelChange)="onQtyChange(itm, $event)"></p-inputNumber>
-                                </td>
-                                <td class="text-right">{{ (itm.unitPrice * itm.qty) | number:'1.2-2' }}</td>
-                                <td>
-                                    <p-button *ngIf="itm._isNew" variant="text" severity="danger"
-                                        (click)="removeItem(i)" icon="fa-solid fa-xmark" />
-                                </td>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="footer">
-                            <tr>
-                                <td colspan="10">
-                                    <div class="text-right">
-                                        <h5><strong>Total: ₹{{ getPrescriptionTotal() | number:'1.2-2' }}</strong></h5>
-                                    </div>
-                                </td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
-                    <p-toast></p-toast>
-                    <!-- New Item Row -->
-                    <form #itemForm="ngForm">
-                        <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center mt-3 mb-3">
-                            <!-- Medicine Dropdown -->
-                            <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions"
-                                optionLabel="label" optionValue="value" placeholder="Select Medicine" class="w-25 mr-2"
-                                name="itemMedicine" [optionDisabled]="'disabled'" (onChange)="onMedicineChange(item)" required>
-                            </p-dropdown>
-                            <!-- Dosage Dropdown -->
-                            <p-dropdown appendTo="self"
-                                *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
-                                [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)"
-                                optionLabel="label" optionValue="value" placeholder="Dosage" class="w-25 mr-2"
-                                name="itemDosage" required>
-                            </p-dropdown>
-                            <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text"
-                                pInputText [(ngModel)]="item.dosage" name="itemDosage" class="w-25 mr-2"
-                                placeholder="Dosage" required />
-
-                            <p-dropdown appendTo="self" [(ngModel)]="item.frequency" [options]="frequencyOptions"
-                                optionLabel="label" optionValue="value" placeholder="Frequency" class="mr-2"
-                                name="itemFrequency" required></p-dropdown>
-
-                            <div class="d-flex mr-2">
-                                <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
-                                    class="w-50 mr-1" min="1" required name="durationValue">
-                                <p-dropdown appendTo="self" [(ngModel)]="item.durationUnit" [options]="durationUnits"
-                                    optionLabel="label" optionValue="value" class="w-50" name="itemDurationUnit"
-                                    required></p-dropdown>
-                            </div>
-
-                            <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" class="mr-2"
-                                style="min-width:150px; max-width:100px; flex:1" placeholder="Instructions" rows="1" required></textarea>
-
-                            <p-inputNumber name="medicinePrice" inputId="integeronly" [(ngModel)]="item.unitPrice"
-                                class="w-25 mr-2" placeholder="Price" [disabled]="true"></p-inputNumber>
-
-                            <p-inputNumber [(ngModel)]="item.qty" [showButtons]="true" [min]="1" name="qtyNewItem"
-                                (ngModelChange)="onQtyChange(item, $event)"></p-inputNumber>
-
-                            <p-button variant="text" severity="success" (click)="addItem()" [disabled]="!itemForm.form.valid" icon="fa-solid fa-check"></p-button>
-                            <p-button variant="text" severity="danger" (click)="newPrescriptionItem = null"
-                                icon="fa-solid fa-xmark"></p-button>
-                        </div>
-                    </form>
-                </div>
-
-                <!-- Notes -->
-                <div class="row mt-2">
-                    <div class="col-md-12">
-                        <label>Notes</label>
-                        <textarea pTextarea [(ngModel)]="_pharmacyNotes" name="pharmacyNotes" placeholder="Notes"
-                            rows="3" class="w-100" required></textarea>
-                    </div>
-
-                </div>
-                <!-- Payment Method -->
-                <div class="row mt-3">
-                    <div class="col-md-12">
-                        <label>Payment Method</label>
-                        <div class="d-flex">
-                            <div class="payment-option" [class.active]="paymentMethod === PaymentMethod._1"
-                                (click)="setPaymentMethod(PaymentMethod._1)">💳 Card</div>
-                            <div class="payment-option ml-2" [class.active]="paymentMethod === PaymentMethod._0"
-                                (click)="setPaymentMethod(PaymentMethod._0)">💵 Cash</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <abp-modal-footer [cancelDisabled]="isSaving"
-                [saveDisabled]="!createPharmacistPrescriptionForm.form.valid  || isSaving"
-                (onCancelClick)="bsModalRef.hide()">
-                <ng-container *ngIf="isSaving">
-                    <i class="pi pi-spin pi-spinner" style="margin-right: 8px;"></i> Saving...
-                </ng-container>
-            </abp-modal-footer>
+      <!-- Patient Selection -->
+      <div class="row">
+        <div class="col-md-12">
+          <label><b>Select Patient</b></label>
+          <p-select [options]="patients" optionLabel="fullName" [optionValue]="'id'" placeholder="Select Patient"
+            [(ngModel)]="selectedPatient" name="patientId" (onChange)="onPatientChange()" class="w-100" required>
+          </p-select>
         </div>
-    </form>
+      </div>
+
+      <!-- Prescription Selection -->
+      <div class="row mt-3">
+        <div class="col-md-12">
+          <label>Select Prescription</label>
+          <p-select [options]="prescriptions" optionLabel="prescriptionName" optionValue="id"
+            placeholder="Select Prescription" [(ngModel)]="selectedPrescription" name="prescriptionId"
+            (onChange)="onPrescriptionChange($event.value)" class="w-100" required>
+          </p-select>
+        </div>
+      </div>
+
+      <!-- Selected Prescription Items Table -->
+      <div class="mt-3" *ngIf="selectedPrescriptionItem?.length > 0">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <h5>Selected Prescription Items</h5>
+          <p-button label="Add Item" severity="info" icon="fa-solid fa-plus" (click)="NewItem()"
+            *ngIf="!newPrescriptionItem" />
+        </div>
+
+        <p-table [value]="selectedPrescriptionItem" class="p-datatable-sm shadow-md rounded"
+          [tableStyle]="{ 'min-width': '40rem' }" [dataKey]="'_rowId'">
+          <ng-template pTemplate="header">
+            <tr>
+              <th>Medicine</th>
+              <th>Dosage</th>
+              <th>Frequency</th>
+              <th>Duration</th>
+              <th>Instructions</th>
+              <th>Price</th>
+              <th>Stock</th>
+              <th>Qty</th>
+              <th class="text-right">Line Total</th>
+              <th>Action</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-itm let-i="rowIndex">
+            <tr>
+              <td>
+                {{ itm.medicineName }}
+                <div *ngIf="itm.batchNo" class="text-muted small">
+                  {{ itm.batchNo }}{{ itm.expiryDate ? ' • ' + (itm.expiryDate | date:'dd/MM/yyyy') : '' }}
+                </div>
+              </td>
+              <td>{{ itm.dosage }}</td>
+              <td>{{ itm.frequency }}</td>
+              <td>{{ itm.duration }}</td>
+              <td>{{ itm.instructions }}</td>
+              <td>{{ itm.unitPrice | number:'1.2-2' }}</td>
+              <td>
+                <span [class.text-danger]="getRemainingStock(itm) === 0"
+                  [class.text-warning]="getRemainingStock(itm) > 0 && getRemainingStock(itm) < 10">
+                  {{ getStockForItem(itm) }}
+                </span>
+              </td>
+              <td style="width:160px;">
+                <p-inputNumber [ngModel]="itm.qty" (ngModelChange)="onQtyChange(itm, $event)" [showButtons]="true"
+                  [min]="1" [max]="getMaxPossibleQtyForCurrentBatch(itm, itm.medicineId)" name="quantity{{itm._rowId}}">
+                </p-inputNumber>
+              </td>
+              <td class="text-right">{{ (itm.unitPrice * itm.qty) | number:'1.2-2' }}</td>
+              <td>
+                <div class="d-flex flex-column">
+                  <!-- Remove button -->
+                  <p-button *ngIf="itm._isNew" variant="text" severity="danger" (click)="removeItem(i)"
+                    icon="fa-solid fa-xmark" class="mb-1" />
+
+                  <!-- Split Batch button - Only shows when at max, no special styling -->
+                  <p-button *ngIf="canSplitToNewBatch(itm)" variant="text" severity="info"
+                    (click)="splitToNewBatch(itm)" icon="fa-solid fa-code-branch" title="Add from another batch"
+                    class="mb-1" />
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+
+          <ng-template pTemplate="footer">
+            <tr>
+              <td colspan="10">
+                <div class="text-right">
+                  <h5><strong>Total: ₹{{ getPrescriptionTotal() | number:'1.2-2' }}</strong></h5>
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+        <p-toast></p-toast>
+      </div>
+
+      <!-- New Prescription Item Form -->
+      <div *ngIf="newPrescriptionItem as item" class="d-flex align-items-center justify-content-between mt-3">
+        <div class="card p-3 mb-0 w-100 mr-3">
+          <div class="row mb-3">
+            <div class="col-md-3">
+              <label><b>Medicine Type</b></label>
+              <p-dropdown name="itemMedicineType" appendTo="self" class="w-100" [(ngModel)]="item.medicineFormId"
+                [options]="medicineTypes" optionLabel="name" optionValue="id" placeholder="Select Type"
+                (onChange)="onMedicineTypeSelect(item)" required>
+              </p-dropdown>
+            </div>
+
+            <div class="col-md-3">
+              <label><b>Medicine</b></label>
+              <p-dropdown name="itemMedicine" appendTo="self" class="w-100" [(ngModel)]="item.medicineId"
+                [options]="medicinesByType" optionLabel="medicineName" optionValue="id" placeholder="Select Medicine"
+                (onChange)="onMedicineSelect(item)" required>
+              </p-dropdown>
+            </div>
+
+            <div class="col-md-3 d-flex flex-column">
+              <label><b>Dosage</b></label>
+              <input type="text" pInputText [(ngModel)]="item.dosage" name="itemDosage" placeholder="Dosage"
+                [readonly]="true" required style="width: 100% !important;">
+            </div>
+
+            <div class="col-md-3 d-flex flex-column">
+              <label><b>Price</b></label>
+              <p-inputNumber [(ngModel)]="item.unitPrice" name="medicinePrice" [disabled]="true"
+                placeholder="Price"></p-inputNumber>
+            </div>
+          </div>
+
+          <div class="row mb-2">
+            <div class="col-md-3">
+              <label><b>Frequency</b></label>
+              <p-dropdown appendTo="self" class="w-100" name="itemFrequency" [(ngModel)]="item.frequency"
+                [options]="frequencyOptions" optionLabel="label" optionValue="value" placeholder="Select Frequency"
+                required>
+              </p-dropdown>
+            </div>
+
+            <div class="col-md-3">
+              <label><b>Duration</b></label>
+              <div class="d-flex">
+                <input type="number" pInputText [(ngModel)]="item.durationValue" min="1" placeholder="Value"
+                  class="form-control mr-1" name="durationValue" required>
+                <p-dropdown appendTo="self" class="flex-fill" [(ngModel)]="item.durationUnit" [options]="durationUnits"
+                  optionLabel="label" optionValue="value" name="itemDurationUnit" required>
+                </p-dropdown>
+              </div>
+            </div>
+
+            <div class="col-md-2 d-flex flex-column">
+              <label><b>Qty</b></label>
+              <p-inputNumber [ngModel]="item.qty" (ngModelChange)="onQtyChange(item, $event)" [showButtons]="true"
+                [min]="1" name="qtyNewItem">
+              </p-inputNumber>
+            </div>
+
+            <div class="col-md-4 d-flex flex-column">
+              <label><b>Instructions</b></label>
+              <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions" placeholder="Instructions"
+                rows="1" style="width: 100% !important;" required></textarea>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-flex flex-column">
+          <p-button severity="success" icon="fa-solid fa-check" (click)="addItem()"
+            [disabled]="!createPharmacistPrescriptionForm.form.valid" class="mb-2"></p-button>
+          <p-button severity="danger" icon="fa-solid fa-xmark" (click)="newPrescriptionItem = null"></p-button>
+        </div>
+      </div>
+
+      <!-- Notes -->
+      <div class="row mt-2">
+        <div class="col-md-12">
+          <label>Notes</label>
+          <textarea pTextarea [(ngModel)]="_pharmacyNotes" name="pharmacyNotes" placeholder="Notes" rows="3"
+            class="w-100" required></textarea>
+        </div>
+      </div>
+
+      <!-- Payment Method -->
+      <div class="row mt-3">
+        <div class="col-md-12">
+          <label>Payment Method</label>
+          <div class="d-flex">
+            <div class="payment-option" [class.active]="paymentMethod === PaymentMethod._1"
+              (click)="setPaymentMethod(PaymentMethod._1)">💳 Card</div>
+            <div class="payment-option ml-2" [class.active]="paymentMethod === PaymentMethod._0"
+              (click)="setPaymentMethod(PaymentMethod._0)">💵 Cash</div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <abp-modal-footer [cancelDisabled]="isSaving"
+      [saveDisabled]="!createPharmacistPrescriptionForm.form.valid || isSaving" (onCancelClick)="bsModalRef.hide()">
+      <ng-container *ngIf="isSaving">
+        <i class="pi pi-spin pi-spinner" style="margin-right: 8px;"></i> Saving...
+      </ng-container>
+    </abp-modal-footer>
+  </form>
 </div>
