--- a/10.2.0/angular/src/app/doctors/view-appoinment/view-appoinment.component.html
+++ b/10.2.0/angular/src/app/doctors/view-appoinment/view-appoinment.component.html
@@ -1,197 +1,120 @@
 <div [@routerTransition]>
     <section class="content-header">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>Appointments</h1>
+            <div class="d-flex justify-content-start align-items-center">
+                <div>
+                    <p-breadcrumb [model]="items" />
                 </div>
             </div>
         </div>
     </section>
-    <section class="content px-2 pb-3">
+    <section class="content px-2 pb-5">
         <div class="container-fluid">
-            <div class="card table-wrapper">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="btn bg-blue" (click)="list()">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control" name="keyword"
-                                    [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
-                                    (keyup.enter)="list()" />
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-default"
-                                        (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                                        <i class="fas" [class.fa-angle-up]="advancedFiltersVisible"
-                                            [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    @if (advancedFiltersVisible) {
-                    <div class="card mb-0 mt-4">
-                        <div class="card-body">
-                            <form class="form-horizontal">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group row mb-0">
-                                            <label class="col-md-2 col-form-label">
-                                                Status
-                                            </label>
-                                            <div class="col-md-10 pt-2">
-                                                <select class="form-control form-select w-50" [(ngModel)]="status"
-                                                    name="status" (change)="onStatusChange()">
-                                                    <option [ngValue]="undefined ">All</option>
-                                                    <option [ngValue]="0">Scheduled</option>
-                                                    <option [ngValue]="1">Checked In</option>
-                                                    <option [ngValue]="2">Completed</option>
-                                                    <option [ngValue]="3">Cancelled</option>
-                                                    <option [ngValue]="4">Rescheduled</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="card-footer">
-                            <button type="button" class="btn bg-blue" (click)="list()">
-                                {{ 'Search' | localize }}
-                            </button>
-                            <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
-                                {{ 'Clear' | localize }}
+            <div class="card mb-0 table-wrapper">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <div class="ml-2 btn-group mr-1" role="group" aria-label="Second group" pTooltip="Filter"
+                            tooltipPosition="top" (click)="statusMenu.toggle($event);">
+                            <button type="button" class="btn btn-md refresh-btn">
+                                <span class="pi pi-filter"></span>
                             </button>
                         </div>
-                    </div>
-                    }
-                </div>
-                <!-- (onLazyLoad)="list($event)" -->
-                <div class="card-body table-responsive table-striped table-bordered">
-                    <div class="primeng-datatable-container">
-                        <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th style="min-width: 150px" pSortableColumn="patientName">
-                                        Patient
-                                        <p-sortIcon field="patientName"></p-sortIcon>
-                                    </th>
-                                    <th style="min-width: 150px" pSortableColumn="doctorName" *ngIf="showDoctorColumn">
-                                        Doctor
-                                        <p-sortIcon field="doctorName"></p-sortIcon>
-                                    </th>
-                                    <th style="min-width: 150px">
-                                        Date & Time
-                                    </th>
-                                    <th style="min-width: 130px">
-                                        Status
-                                    </th>
-                                    <th style="min-width: 130px">
-                                        Actions
-                                    </th>
-                                </tr>
-                            </ng-template>
+                        <p-overlayPanel #statusMenu class="custom-overlay" [dismissable]="true">
+                            <ul class="custom-overlay-menu list-unstyled mb-0 p-3">
+                                <li *ngFor="let s of statuses" class="mb-2">
+                                    <p-checkbox [(ngModel)]="s.selected" binary="true"
+                                        (onChange)="onStatusChange()"></p-checkbox>
+                                    &nbsp; {{ s.label }}
+                                </li>
+                            </ul>
+                        </p-overlayPanel>
 
-                            <ng-template pTemplate="body" let-record="$implicit">
-                                <tr>
-                                    <td>
-                                        <span>
-                                            {{ record.patient?.fullName }}
-                                        </span>
-                                    </td>
-                                    <td *ngIf="showDoctorColumn">
-                                        <span>
-                                            Dr. {{ record.doctor?.fullName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <p class="m-0">
-                                            {{ record.appointmentDate | date: 'dd/MM/yyyy' }}
-                                        </p>
-                                        <p class="m-0">
-                                            {{record.appointmentTimeSlot}}
-                                        </p>
-                                    </td>
-                                    <td>
-                                        <p-tag 
-                                            [value]="getStatusLabel(record.status)" 
-                                            [severity]="getStatusSeverity(record.status)" 
-                                            [rounded]="true">
-                                        </p-tag>
-                                    </td>
-                                    <td *ngIf="record.status !== 3">
-                                        <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                                            (click)="rowMenu.toggle($event); selectedRecord = record">
-                                        </button>
-                                        <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                                            <ul class="custom-overlay-menu">
-                                                <!-- Edit: Only show if not Completed -->
-                                                <!-- <li *ngIf="record.status !== 0 || record.status!==1"
-                                                    (click)="editAppoinment(selectedRecord)">
-                                                    <i class="pi pi-pencil"></i> Edit
-                                                </li> -->
-                                                <!-- Delete: Only if not CheckedIn -->
-                                                <!-- <li *ngIf="record.status !== 0 && record.status!==1" (click)="delete(selectedRecord)">
-                                                    <i class="pi pi-trash"></i> Delete
-                                                </li> -->
-                                                <!-- Reschedule: Only if not CheckedIn -->
-                                                <li *ngIf="record.status !== 0 || record.status!==1"
-                                                    (click)="reschedulAppoinment(record.id)">
-                                                    <i class="pi pi-clock"></i> Rescheduled
-                                                </li>
-                                                <!-- Mark as In Progress: Only if not CheckedIn -->
-                                                <li (click)="changeStatusofAppoinment(record.id,2)"
-                                                    *ngIf="record.status !== 1 || record.status!==0">
-                                                    <i class="pi pi-check"></i> Mark as in progress
-                                                </li>
-                                                <!-- Cancel: Always visible -->
-                                                <li *ngIf="record.status!==3" (click)="changeStatusofAppoinment(record.id,4)">
-                                                    <i class="pi pi-times"></i> Cancel
-                                                </li>
-                                            </ul>
-                                        </p-overlayPanel>
-                                    </td>
-                                    <td *ngIf="record.status === 3"></td> 
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
-                            {{ 'NoData' | localize }}
+                        <div>
+                            <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
                         </div>
-                        <div class="ui-table-footer"></div>
+                    </div>
+                    <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+                        rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+                        (onLazyLoad)="list($event)">
+                        <ng-template #header>
+                            <tr>
+                                <th style="min-width: 150px" pSortableColumn="patientName">
+                                    Patient
+                                    <p-sortIcon field="patientName"></p-sortIcon>
+                                </th>
+                                <th style="min-width: 150px" pSortableColumn="doctorName" *ngIf="showDoctorColumn">
+                                    Doctor
+                                    <p-sortIcon field="doctorName"></p-sortIcon>
+                                </th>
+                                <th style="min-width: 150px">
+                                    Date & Time
+                                </th>
+                                <th style="min-width: 130px">
+                                    Status
+                                </th>
+                                <th style="min-width: 130px">
+                                    Actions
+                                </th>
+                            </tr>
+                        </ng-template>
+
+                        <ng-template pTemplate="body" let-record="$implicit">
+                            <tr>
+                                <td>
+                                    <p-avatar [label]="getShortName(record.patient?.fullName)"
+                                        [style]="{ 'background-color': '#ece9fc', color: '#2a1261' }" class="mr-1"
+                                        size="small" />
+                                    <span>
+                                        {{ record.patient?.fullName }}
+                                    </span>
+                                </td>
+                                <td *ngIf="showDoctorColumn">
+                                    <p-avatar [label]="getShortName(record.doctor?.fullName)"
+                                        [style]="{ 'background-color': '#ece9fc', color: '#2a1261' }" class="mr-1"
+                                        size="small" />
+                                    <span>
+                                        Dr. {{ record.doctor?.fullName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <p class="m-0">
+                                        {{ record.appointmentDate | date: 'dd/MM/yyyy' }}
+                                    </p>
+                                    <p class="m-0">
+                                        {{record.appointmentTimeSlot}}
+                                    </p>
+                                </td>
+                                <td>
+                                    <span [className]="getStatusSeverity(record.status)">
+                                        {{getStatusLabel(record.status)}}
+                                    </span>
+                                </td>
+                                <td *ngIf="record.status !== 3">
+
+                                    <button class="btn btn-sm border rounded-1 px-3" type="button"
+                                        style="background-color: #f8fafc;"
+                                        (click)="rowMenu.toggle($event); selectedRecord = record">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </button>
+                                    <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                                        [model]="editDeleteMenus" appendTo="body"></p-menu>
+
+                                </td>
+                                <td *ngIf="record.status === 3"></td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        {{ 'NoData' | localize }}
                     </div>
                 </div>
-
-
-                <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true" [currentPageReportTemplate]="
+                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                    (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
+                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                    [showCurrentPageReport]="true" [currentPageReportTemplate]="
                                             'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
                                         "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
